--- a/rotten_mangoes/Gemfile
+++ b/rotten_mangoes/Gemfile
@@ -39,3 +39,5 @@ gem 'bcrypt', '~> 3.1.7'
 # gem 'debugger', group: [:development, :test]
 
 gem 'carrierwave', '~> 0.10.0'
+gem 'rmagick'
+gem 'pry'
