--- a/rotten_mangoes/Gemfile
+++ b/rotten_mangoes/Gemfile
@@ -42,3 +42,4 @@ gem 'carrierwave', '~> 0.10.0'
 gem 'rmagick'
 gem 'pry'
 gem 'kaminari'
+gem 'ransack', github: 'activerecord-hackery/ransack', branch: 'rails-4.1'
