title, director, and category search works

--- a/rotten_mangoes/Gemfile
+++ b/rotten_mangoes/Gemfile
@@ -42,4 +42,4 @@ gem 'carrierwave', '~> 0.10.0'
 gem 'rmagick'
 gem 'pry'
 gem 'kaminari'
-gem 'ransack', github: 'activerecord-hackery/ransack', branch: 'rails-4.1'
+# gem 'ransack', github: 'activerecord-hackery/ransack', branch: 'rails-4.1'
